# serializer version: 1
# name: test_cast_aligner_no_bash
  '''
  ---
  description: Precision Aligner. Makes targeted code changes.
  mode: subagent
  model: github-copilot/gpt-5.2-codex
  temperature: 0.1
  tools:
    "read": true
    "glob": true
    "grep": true
    "write": true
    "edit": true
  permission:
    "edit": allow
    "write": allow
  ---
  
  # Aligner
  '''
# ---
# name: test_cast_all_fixtures
  dict({
    'aligner.md': '''
      ---
      description: Precision Aligner. Makes targeted code changes.
      mode: subagent
      model: github-copilot/gpt-5.2-codex
      temperature: 0.1
      tools:
        "read": true
        "glob": true
        "grep": true
        "write": true
        "edit": true
      permission:
        "edit": allow
        "write": allow
      ---
      
      # Aligner
      
      Makes targeted code changes to align implementations.
  
    ''',
    'explorer.md': '''
      ---
      description: Code Explorer. Reads and analyzes source code.
      mode: subagent
      model: github-copilot/claude-opus-4.6
      temperature: 0.05
      skills:
        - repomix-explorer
      tools:
        "read": true
        "glob": true
        "grep": true
        "write": true
        "edit": true
        "webfetch": true
        "websearch": true
        "context7": true
        "bash": true
      permission:
        "bash":
          "*": deny
          "npx repomix@latest*": allow
          "bunx repomix@latest*": allow
        "edit": allow
        "write": allow
      ---
      
      # Explorer
      
      Read-only code exploration agent. Traces execution paths and produces reports.
  
    ''',
    'feature-lead.md': '''
      ---
      description: Nested lead fixture that exercises the `all` capability.
      mode: subagent
      model: github-copilot/gpt-5.2-codex
      temperature: 0.1
      tools:
        "read": true
        "glob": true
        "grep": true
        "write": true
        "edit": true
        "webfetch": true
        "websearch": true
        "bash": true
        "task": true
      permission:
        "bash": allow
        "task": allow
        "edit": allow
        "write": allow
        "read": allow
        "glob": allow
        "grep": allow
        "webfetch": allow
        "websearch": allow
        "question": allow
      ---
      
      # Feature Lead
      
      Exercises full capability expansion in a nested fixture.
  
    ''',
    'impl-worker.md': '''
      ---
      description: Nested implementation worker fixture.
      mode: subagent
      model: github-copilot/gpt-5.2-codex
      temperature: 0.1
      tools:
        "read": true
        "glob": true
        "grep": true
        "write": true
        "edit": true
      permission:
        "edit": allow
        "write": allow
      ---
      
      # Impl Worker
      
      Implements changes in nested fixture tests.
  
    ''',
    'nested-coordinator.md': '''
      ---
      description: Nested test coordinator for recursive fixture coverage.
      mode: primary
      model: github-copilot/claude-opus-4.6
      temperature: 0.2
      tools:
        "read": true
        "glob": true
        "grep": true
        "write": true
        "edit": true
        "task": true
      permission:
        "task":
          "*": deny
          "nested/feature-lead": allow
          "nested/support/research-helper": allow
        "edit": allow
        "write": allow
        "question": allow
      ---
      
      # Nested Coordinator
      
      Coordinates the nested test roles.
  
    ''',
    'orchestrator.md': '''
      ---
      description: Orchestrator. Coordinates sub-agents.
      mode: primary
      model: github-copilot/claude-opus-4.6
      temperature: 0.2
      tools:
        "read": true
        "glob": true
        "grep": true
        "write": true
        "edit": true
        "bash": true
        "task": true
      permission:
        "bash":
          "*": deny
          "ls*": allow
          "cat*": allow
          "git status*": allow
        "task":
          "*": deny
          "explorer": allow
          "aligner": allow
        "edit": allow
        "write": allow
        "question": allow
      ---
      
      # Orchestrator
      
      Coordinates exploration and alignment sub-agents.
  
    ''',
    'qa-worker.md': '''
      ---
      description: Nested QA worker fixture.
      mode: subagent
      model: github-copilot/claude-opus-4.6
      temperature: 0.05
      tools:
        "read": true
        "glob": true
        "grep": true
        "bash": true
      permission:
        "bash":
          "*": deny
          "echo*": allow
          "printf*": allow
          "wc*": allow
          "sort*": allow
          "uniq*": allow
          "head*": allow
          "tail*": allow
          "cut*": allow
          "tr*": allow
          "diff*": allow
          "pwd": allow
          "basename*": allow
          "dirname*": allow
          "date*": allow
          "uname*": allow
          "whoami": allow
          "which*": allow
          "git log*": allow
          "git diff*": allow
          "git status*": allow
          "git branch*": allow
          "git show*": allow
          "git rev-parse*": allow
          "git remote*": allow
      ---
      
      # QA Worker
      
      Verifies nested fixture behavior.
  
    ''',
    'research-helper.md': '''
      ---
      description: Nested research helper fixture.
      mode: subagent
      model: github-copilot/claude-opus-4.6
      temperature: 0.05
      tools:
        "read": true
        "glob": true
        "grep": true
        "webfetch": true
        "websearch": true
      ---
      
      # Research Helper
      
      Collects supporting context for nested fixture tests.
  
    ''',
  })
# ---
# name: test_cast_explorer
  '''
  ---
  description: Code Explorer. Reads and analyzes source code.
  mode: subagent
  model: github-copilot/claude-opus-4.6
  temperature: 0.05
  skills:
    - repomix-explorer
  tools:
    "read": true
    "glob": true
    "grep": true
    "write": true
    "edit": true
    "webfetch": true
    "websearch": true
    "context7": true
    "bash": true
  permission:
    "bash":
      "*": deny
      "npx repomix@latest*": allow
      "bunx repomix@latest*": allow
    "edit": allow
    "write": allow
  ---
  
  # Explorer
  
  Read-only code exploration agent.
  '''
# ---
# name: test_cast_orchestrator_with_delegates
  '''
  ---
  description: Orchestrator. Coordinates sub-agents.
  mode: primary
  model: github-copilot/claude-opus-4.6
  temperature: 0.2
  tools:
    "read": true
    "glob": true
    "grep": true
    "write": true
    "edit": true
    "bash": true
    "task": true
  permission:
    "bash":
      "*": deny
      "ls*": allow
      "cat*": allow
      "git status*": allow
    "task":
      "*": deny
      "explorer": allow
      "aligner": allow
    "edit": allow
    "write": allow
    "question": allow
  ---
  
  # Orchestrator
  '''
# ---
# name: test_temperature_default_primary
  '''
  ---
  description: Test
  mode: primary
  model: github-copilot/claude-opus-4.6
  temperature: 0.2
  tools:
    "read": true
    "glob": true
    "grep": true
    "write": true
    "edit": true
    "webfetch": true
    "websearch": true
  permission:
    "edit": allow
    "write": allow
    "question": allow
  ---
  '''
# ---
# name: test_temperature_default_subagent
  '''
  ---
  description: Test
  mode: subagent
  model: github-copilot/gpt-5.2-codex
  temperature: 0.1
  tools:
    "read": true
    "glob": true
    "grep": true
    "write": true
    "edit": true
    "webfetch": true
    "websearch": true
  permission:
    "edit": allow
    "write": allow
  ---
  '''
# ---
